# ChangeLog for app-emulation/qemu-softmmu
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-softmmu/Attic/ChangeLog,v 1.26 2006/08/18 12:23:59 lu_zero Exp $

  18 Aug 2006; Luca Barbato <lu_zero@gentoo.org> qemu-softmmu-0.8.2.ebuild:
  remove stray dep

  17 Aug 2006; Luca Barbato <lu_zero@gentoo.org> qemu-softmmu-0.8.2.ebuild,
  qemu-softmmu-0.8.2-r1.ebuild:
  Remove stray bits from the older ebuild

*qemu-softmmu-0.8.2-r1 (17 Aug 2006)

  17 Aug 2006;  Luca Barbato <lu_zero@gentoo.org>
  qemu-softmmu-0.8.2-r1.ebuild, files/digest-qemu-softmmu-0.8.2-r1:
  Added alsa support as requested in bug #116599 by Ivan Yosifov <ivan@yosifov.net>
  and adlib support as requested by Jan Simons <gentoo@onkos.de> on the same bug;
  use tc-getCC, patch from Damien THEBAULT <damien.thebault@laposte.net> in
  bug #132602, set correct kqemu deps, should solve bug #141721

  01 Aug 2006; Luca Barbato <lu_zero@gentoo.org> qemu-softmmu-0.8.2.ebuild:
  False hope, gcc-3 is still required.

*qemu-softmmu-0.8.2 (01 Aug 2006)

  01 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/qemu-0.8.2-sparc-fp.patch, +qemu-softmmu-0.8.2.ebuild:
  New version, should work better with gcc-4

*qemu-softmmu-0.8.1-r1 (12 Jul 2006)

  12 Jul 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/qemu-0.8.0-gcc4-hacks.patch, +files/qemu-0.8.0-gcc4-opts.patch,
  +qemu-softmmu-0.8.1-r1.ebuild:
  Updated revision, with alsa and partial gcc4 support on x86 (phreak and
  genstef found the patches)

  09 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -files/qemu-softmmu-0.7.0-errno.patch, -files/kqemu-0.7.1-sysfs.patch,
  -files/kqemu-sysfs.patch, -qemu-softmmu-0.7.0-r1.ebuild,
  -qemu-softmmu-0.7.1.ebuild, -qemu-softmmu-0.7.1-r1.ebuild,
  -qemu-softmmu-0.7.2.ebuild:
  clean out old files

*qemu-softmmu-0.8.1 (06 May 2006)

  06 May 2006; Luca Barbato <lu_zero@gentoo.org> +qemu-softmmu-0.8.1.ebuild:
  New version
